src/ui/components/post-preview/index.less
@import '../../../cohost-inherited.less';

.post-preview {
    background: var(--cohost-bg);
    color: black;
    border-radius: 0.5rem;
    box-shadow: 0 4px 5px rgba(25, 25, 25, 0.14), 0 1px 10px rgba(25, 25, 25, 0.12),
        0 2px 4px rgba(0, 0, 0, 0.2);
    user-select: none;

    & > hr {
        height: 0;
        margin: 0 0.75rem;
        border: none;
        border-top: 1px solid rgb(191 186 181);
    }

    .prose-container {
        padding: 0 0.75rem;
        overflow: hidden;
        position: relative;
        background: white;
        font-size: var(--font-size-content);

        .inner-prose {
            margin: 1rem 0;
            overflow-wrap: break-word;
            max-width: 65ch;
            user-select: text;
            contain: layout;

            &.is-error {
                border: 2px dashed red;
                border-radius: 0.5rem;
                padding: 0.2rem 0.5rem;
                white-space: pre-wrap;
            }
        }
    }

    &.is-stale .inner-prose {
        transition: opacity 0.3s 0.5s;
        opacity: 0.5;
    }

    & > .post-header,
    & > .post-footer {
        display: flex;
        justify-content: space-between;
        align-items: center;
        padding: 0.5em 0.75em;
    }

    & > .post-header {
        .render-config {
            display: flex;
        }

        .i-config-button,
        .i-errors-button {
            display: inline-flex;
            gap: 0.3em;
            align-items: center;
            background: none;
            border: 1px solid var(--separator);
            margin: 0;
            padding: 0.1em 0.2em;
            border-radius: 0.5em;
            font: inherit;
            color: inherit;
            opacity: var(--inactive-opacity);
            position: relative;

            --inactive-opacity: 0.2;
        }

        .i-config-button {
            display: inline-flex;
            opacity: 1;
            border-color: rgb(var(--color-accent));
            --active-bg: rgb(var(--color-accent));
            gap: 0.1em;
            padding: 0.1em;
            white-space: nowrap;
            flex-wrap: wrap;

            .config-icon {
                aspect-ratio: 1;
                width: 20px;
                margin-right: 0.1em;
            }

            .config-preview-item {
                background: #0002;
                padding: 0.1em 0.2em;
                border-radius: 0.3em;
            }
        }

        .i-errors-button {
            --fg: currentColor;
            --bg: transparent;
            --active-bg: var(--error);
            --active-fg: var(--error-content-fg);

            .i-errors-icon {
                display: inline-flex;
                justify-content: center;
                align-items: center;
                width: 1.3em;
                height: 1.3em;
                border-radius: 50%;
                background: var(--bg);
                border: 1px solid var(--fg);
                color: var(--fg);
                font-size: smaller;
            }

            &.has-errors {
                opacity: 1;
                border-color: var(--error);

                .i-errors-icon {
                    background: var(--active-bg);
                    color: var(--active-fg);
                    border-color: var(--active-bg);
                    animation: post-preview-header-errors-has-errors 1s;
                }
                @keyframes post-preview-header-errors-has-errors {
                    0% {
                        transform: none;
                        opacity: var(--inactive-opacity);
                        background: var(--bg);
                        color: var(--fg);
                        border-color: var(--fg);
                    }
                    20% {
                        background: var(--active-bg);
                        color: var(--active-fg);
                        border-color: var(--active-bg);
                        transform: scale(2);
                    }
                }
            }

            .i-errors-count {
                font-feature-settings: 'tnum' 1;
            }
        }

        .i-config-button,
        .i-errors-button.has-errors {
            &::before {
                content: '';
                position: absolute;
                inset: -4px;
                border-radius: calc(0.5em + 3px);
                border: 1px solid var(--active-bg);
                opacity: 0;
                transform: scale(0.9);
                transition: all 0.2s;
            }

            &:hover::before {
                opacity: 1;
                transform: scale(1);
            }
        }

        .i-config-contents {
            width: 80vw;
            max-width: 20em;

            .i-config-title {
                font-weight: bold;
                padding: 0.5em;
                font-size: 1.1em;
            }

            .i-cohost-unavailable {
                display: flex;
                align-items: center;
                gap: 0.5em;
                padding: 0.5em;

                .i-icon {
                    flex-shrink: 0;
                }
            }

            .config-item {
                padding: 0.5em;
                border-top: 1px solid var(--separator);

                .item-header {
                    font-weight: bold;
                    margin-bottom: 0.2em;
                }
                .item-description {
                    color: rgb(var(--color-fg) / 0.8);
                }
            }
        }

        .i-errors {
            margin: 0;
            padding: 0;
            list-style: none;
            width: 80vw;
            max-width: 20em;

            &:empty::before {
                content: 'No errors. Everything is ok!';
                padding: 1em;
                text-align: center;
            }

            .i-error {
                padding: 0.5em 0.75em;

                & + .i-error {
                    border-top: 1px solid var(--separator);
                }

                .quick-help {
                    margin-top: 0.5em;
                    font-size: smaller;
                    border-radius: 0.5em;
                    padding: 0.5em;
                    background: var(--info-box-bg);
                }
            }
        }
    }

    & > .post-footer {
        --size-meter-fg: 0 0 0;

        .post-size-meter {
            --size-of-max: 0;
            color: color-mix(
                in oklab,
                rgb(var(--size-meter-fg)),
                rgb(var(--color-warning)) calc(var(--size-of-max) * 100%)
            );

            .i-warning {
                border: 1px solid;
                border-radius: 0.5em;
                padding: 0.1em 0.4em;
            }
        }

        .copy-to-clipboard {
            position: relative;
            font: inherit;
            background: none;
            border: 1px solid rgb(var(--color-accent));
            border-radius: 0.5em;
            padding: 0.2em 0.3em;
            color: inherit;
            transition: background 0.2s, color 0.2s;

            &:disabled {
                opacity: 0.5;
            }

            &:active {
                background: rgb(var(--color-accent));
                color: rgb(var(--color-accent-fg));
            }

            &.did-copy {
                animation: post-preview-copy-to-clipboard-did-copy 1s;
                @keyframes post-preview-copy-to-clipboard-did-copy {
                    0% {
                        background: rgb(var(--color-accent));
                        color: transparent;
                    }
                    90% {
                        background: rgb(var(--color-accent));
                        color: transparent;
                    }
                }

                &::after {
                    content: '✓';
                    position: absolute;
                    top: 50%;
                    left: 50%;
                    transform: translate(-50%, -50%);
                    color: rgb(var(--color-accent-fg));

                    animation: post-preview-copy-to-clipboard-did-copy-after 1s;
                    @keyframes post-preview-copy-to-clipboard-did-copy-after {
                        0% {
                            transform: translate(-50%, -50%) scale(0.01);
                            animation-timing-function: cubic-bezier(0.2, 0.7, 0.6, 1);
                        }
                        15% {
                            transform: translate(-50%, -50%) scale(1.2);
                            animation-timing-function: cubic-bezier(0.2, 0.7, 0.3, 1);
                        }
                        40% {
                            transform: translate(-50%, -50%);
                        }
                        90% {
                            color: rgb(var(--color-accent-fg));
                        }
                        100% {
                            color: transparent;
                        }
                    }
                }
            }
        }
        .copy-to-clipboard-warnings {
            .i-warnings {
                list-style: none;
                padding: 0;
                margin: 0;
                width: 80vw;
                max-width: 32ch;

                li {
                    padding: 0.5em 1em;
                    border-bottom: 1px solid var(--separator);
                }
            }
            .i-buttons {
                padding: 0.5em 1em;
                display: flex;
                justify-content: space-between;
            }
        }
    }

    .prose-read-more {
        font-weight: 700;
        color: rgb(131 37 79);
        font-size: 0.875em;
        line-height: 1.25em;
        padding-bottom: 0.75em;
        background: white;
        cursor: pointer;
        display: inline-block;
        text-decoration: inherit;

        &:hover {
            text-decoration: underline;
        }
    }

    &.simulate-userstyles {
        background: #435;
        color: #fff;

        & > .post-footer {
            --size-meter-fg: 255 255 255;
        }

        & > .post-header .config-preview-item {
            background: #fff2;
        }

        & > hr {
            border-color: #fff2;
        }

        & > .p-prose-outer {
            background: #324;

            & > .p-prose {
                color: #f2f0f5;
                --tw-prose-body: #f2f0f5;
                --tw-prose-headings: #faf5ff;
                --tw-prose-lead: #e1e0e3;
                --tw-prose-links: #fff;
                --tw-prose-bold: #fff;
                --tw-prose-counters: #a6a0af;
                --tw-prose-bullets: #969099;
                --tw-prose-hr: #546;
                --tw-prose-quotes: #fff;
                --tw-prose-quote-borders: #546;
                --tw-prose-code: #fff;
                --tw-prose-pre-code: #f0f0f5;
                --tw-prose-pre-bg: #213;
                --tw-prose-th-borders: #546;
                --tw-prose-td-borders: #435;
            }

            & > .prose-read-more {
                background: inherit;
                color: color-mix(in lab, rgb(var(--color-accent)), white);
            }
        }
    }
}

.p-prose-outer {
    .cohost-prose-outer();
}
.p-prose-outer .p-prose {
    .cohost-prose();
}

.cohost-message-box {
    position: relative;
    z-index: 5;
    margin: 1em;
    padding: 1em;
    border-radius: 0.5em;
    background: rgb(var(--color-bg));
    color: rgb(var(--color-fg));
    box-shadow: 0 0.5em 1em #0009;

    :first-child {
        margin-top: 0;
    }
    :last-child {
        margin-bottom: 0;
    }

    &[data-level='warning'] {
        color: var(--error-text);
    }
}

